version/0.10/_sources/API/_autosummary/ansys.aedt.core.modules.solve_setup.SetupSBR.rst.txt
SetupSBR
========

.. currentmodule:: ansys.aedt.core.modules.solve_setup

.. autoclass:: SetupSBR

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      SetupSBR.add_mesh_link
      
      
      SetupSBR.add_subrange
      
      
      SetupSBR.analyze
      
      
      SetupSBR.create
      
      
      SetupSBR.create_report
      
      
      SetupSBR.delete
      
      
      SetupSBR.disable
      
      
      SetupSBR.enable
      
      
      SetupSBR.enable_expression_cache
      
      
      SetupSBR.get_profile
      
      
      SetupSBR.get_solution_data
      
      
      SetupSBR.start_continue_from_previous_setup
      
      
      SetupSBR.update
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      SetupSBR.available_properties
      SetupSBR.default_intrinsics
      SetupSBR.is_solved
      SetupSBR.name
      SetupSBR.omodule
      SetupSBR.p_app
   
   